# hwfi

./: .gitignore  CHANGELOG.md  README.md  cabal.project  hwfi.cabal
.cursor/rules/: project-docs.mdc
.cursor/skills/session-handoff/: SKILL.md
app/: Main.hs
docs/: STATUS.md  TASKS.md  caching-and-resume.md  code-issues.md  execution-model.md  h1-verification.md  idea.md  semantic-check-design.md  skills-design.md  spec-issues.md  spec.md  tool-use.md  workflow-reference.md  workflow-refs.md
docs/log/: 2026-07.md
docs/log/archive/: tasks-2026-07.md
docs/tutorials/: 01-hello.md  02-check.md  03-agent.md  04-show-and-continue.md  04-show-and-resume.md  04-show-resume.md  README.md
examples/coding/: .env.example  README.md  model-catalog.json  project.json
examples/coding/sample-workspace/: broken.sh  hello.sh
examples/coding/workflows/: fix.md  render.md
examples/control-flow/: README.md  inputs.example.json  project.json
examples/control-flow/sample-workspace/: b.sh  c.sh
examples/control-flow/workflows/: main.md  tick-body.md  tick-pred.md  tick-stop.md
examples/hello/: README.md  project.json
examples/hello/workflows/: inner.md  main.md
examples/research/: .env.example  README.md  inputs.example.json  model-catalog.json  project.json  schema.json
examples/research/tools/: authorize.md  converse.md  corpus.md  headline.md  lookup.md
examples/research/types/: chat-log.md  doc-brief.md  message.md
examples/research/workflows/: answer.md  audit.md  critique.md  extract.md  investigate.md  main.md
examples/semantic-check/: README.md  pragmatic-schema.json  project.json
examples/semantic-check/tools/: build-catalog.md  builtin-or-dead.md  catalog-row.md  corpus-cluster-divergence-hint.md  corpus-cluster-redundancy-hint.md  corpus-clusters.md  corpus-compression-outlier-hint.md  corpus-entropy-outlier-hint.md  corpus-hint-is-gate.md  corpus-hints.md  corpus-profile-decl.md  corpus-profile-public.md  corpus-profile-section.md  corpus-profile.md  corpus-slice-by-id.md  corpus-slice-id.md  dead-ref-finding.md  double-row-first.md  doubles-equal.md  empty-review-gate-items.md  empty-speech-act-hints.md  empty-speech-act-tags.md  entry-finding.md  entry-missing-finding.md  error-finding.md  is-builtin.md  list-has-second.md  location-equal.md  markdown-section-body.md  mode-is-exploratory.md  nonempty.md  pragmatic-contradiction-findings.md  pragmatic-felicity-findings.md  pragmatic-filter-findings.md  pragmatic-force-finding.md  pragmatic-llm-to-findings.md  pragmatic-review-one.md  pragmatic-review.md  prose-file-scan.md  prose-hint-finding.md  (+35 more)
examples/semantic-check/types/: catalog-entry.md  corpus-cluster.md  corpus-profile.md  corpus-slice.md  declaration-summary.md  double-row.md  finding-matrix.md  finding.md  hit-row.md  project-check.md  review-gate-item.md  speech-act-hint.md  speech-act-tag.md  step-ref-matrix.md  step-ref-result.md  step-summary.md  string-row.md
examples/semantic-check/workflows/: main.md
examples/semantic-pragmatic/: README.md  model-catalog.json  project.json
examples/semantic-pragmatic/tools/: empty-findings.md  json-get-location.md  json-get-text.md  patch-pragmatic-report.md  pragmatic-clarity-finding.md  pragmatic-felicity-valid.md  pragmatic-llm-to-findings.md  pragmatic-review-gate-json.md  pragmatic-review-one-json.md  string-nonempty.md  string-row-first.md  strings-equal.md
examples/semantic-pragmatic/workflows/: main.md
examples/semantic-summary/: README.md  model-catalog.json  project.json
examples/semantic-summary/tools/: collect-actionable-findings.md  filter-actionable-findings.md  finding-as-text.md  finding-is-actionable.md  finding-line.md  hit-nonempty.md  json-values-or-empty.md  mode-is-narrative.md  narrative-summary.md  render-findings-body.md  report-as-text.md  report-ok-label.md  report-summary.md  review-gate-note.md  string-row-first.md  summary-header.md
examples/semantic-summary/types/: finding.md  hit-row.md  location.md  string-row.md
examples/semantic-summary/workflows/: main.md
examples/ship/: .env.example  README.md  inputs.example.json  model-catalog.json  plan-schema.json  project.json  semantic-report.json
examples/ship/skills/: haskell-cabal-guide.md  react-patterns-guide.md  run-verify.md  typescript-vite-guide.md  webapp-html-guide.md
examples/ship/tools/: authorize.md  converse.md  plan-task-at.md  plan-tasks.md  task-line.md  vite-dev-smoke.md
examples/ship/types/: chat-log.md  message.md  task.md
examples/ship/workflows/: audit.md  build.md  continue-pred.md  distill.md  implement.md  main.md  plan.md  repair.md  review.md
examples/skills/: README.md  inputs.example.json  model-catalog.json  project.json
examples/skills-runtime/: README.md  model-catalog.json  project.json
examples/skills-runtime/skills/: fix-shell.md  shell-repair-guide.md
examples/skills-runtime/tools/: search.md
examples/skills-runtime/workflows/: main.md
examples/skills/tools/: skill-writer.md
examples/skills/workflows/: extract.md
examples/summarise/: .env.example  README.md  model-catalog.json  project.json
examples/summarise/workflows/: main.md
examples/webapp/: README.md  model-catalog.json  project.json  semantic-report.json
examples/webapp/workflows/: build.md
examples/workflow-refs/: README.md  project.json
examples/workflow-refs/tools/: lookup.md  search.md
examples/workflow-refs/workflows/: conditional-route.md  main.md  pass-handler.md
scripts/: semantic-review.sh
src/Hwfi/: Check.hs  Cli.hs  Compat.hs  SkillCatalog.hs  Source.hs  Type.hs  TypedProject.hs
src/Hwfi/Ast/: Expr.hs  InstructionSkill.hs  Name.hs  Project.hs  Skill.hs  Step.hs  Tool.hs  Type.hs  TypeAlias.hs  Workflow.hs
src/Hwfi/Check/: Alias.hs  Builtins.hs  Decl.hs  Error.hs  Expr.hs  Graph.hs  RefHints.hs
src/Hwfi/Parse/: Expr.hs  Frontmatter.hs  Lexer.hs  Markdown.hs  Project.hs  Section.hs  Step.hs  Type.hs  TypeAlias.hs
src/Hwfi/Project/: Manifest.hs
src/Hwfi/Runtime/: Agent.hs  (+37 more)
test/Hwfi/: CheckSpec.hs  CliSpec.hs  ExamplesE2ESpec.hs  SourceSpec.hs  TypeSpec.hs
(+119 files in other folders)
