cabal-version:      3.0
name:               hwfi
version:            0.1.0.0
synopsis:           A markdown-defined workflow execution engine
description:        A command-line workflow engine that loads a workflow
                    project of markdown and JSON files, type-checks it, and
                    executes it with a resumable, traced runtime.
license:            BSD-3-Clause
author:             Daniel van den Eijkel
build-type:         Simple

common opts
    default-language: GHC2021
    default-extensions:
        DerivingStrategies
        DuplicateRecordFields
        LambdaCase
        OverloadedRecordDot
        OverloadedStrings
        RecordWildCards
    ghc-options:
        -Wall
        -Wunused-imports
        -Werror=missing-fields

library
    import:           opts
    hs-source-dirs:   src
    exposed-modules:
        Hwfi.Cli
        Hwfi.Compat
        Hwfi.Project.Manifest
        Hwfi.Runtime.KeyStore
        Hwfi.Runtime.ModelCatalog
        Hwfi.Runtime.Provider
        Hwfi.Runtime.Secret
    build-depends:
        base                 ^>=4.18,
        aeson                >=2.0  && <2.3,
        bytestring           >=0.11 && <0.12,
        containers           ^>=0.6.7,
        directory            >=1.3  && <1.4,
        dotenv               >=0.11 && <0.13,
        filepath             >=1.4  && <1.6,
        llm-simple,
        mtl                  >=2.3  && <2.4,
        optparse-applicative >=0.16 && <0.19,
        text                 >=1.2  && <2.2

executable hwfi
    import:           opts
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:
        base,
        hwfi

test-suite hwfi-test
    import:           opts
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    other-modules:
        Hwfi.Project.ManifestSpec
        Hwfi.Runtime.KeyStoreSpec
        Hwfi.Runtime.ProviderSpec
    build-depends:
        base,
        aeson,
        bytestring >=0.11 && <0.12,
        containers ^>=0.6.7,
        directory  >=1.3 && <1.4,
        filepath   >=1.4 && <1.6,
        hspec      >=2.10 && <2.12,
        hwfi,
        temporary  >=1.3 && <1.4,
        text
    build-tool-depends: hspec-discover:hspec-discover
