cabal-version:      3.0
name:               hwfi
version:            0.1.0.0
synopsis:           A markdown-defined workflow execution engine
description:        A command-line workflow engine that loads a workflow
                    project of markdown and JSON files, type-checks it, and
                    executes it with a resumable, traced runtime.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Daniel van den Eijkel
maintainer:         1515314+aische@users.noreply.github.com
homepage:           https://github.com/aische/hwfi
category:           Development
build-type:         Simple

source-repository head
    type:     git
    location: https://github.com/aische/hwfi

common opts
    default-language: GHC2021
    default-extensions:
        DerivingStrategies
        DuplicateRecordFields
        LambdaCase
        OverloadedRecordDot
        OverloadedStrings
        RecordWildCards
    ghc-options:
        -Wall
        -Wunused-imports
        -Werror=missing-fields

library
    import:           opts
    hs-source-dirs:   src
    exposed-modules:
        Hwfi.Ast.Expr
        Hwfi.Ast.Name
        Hwfi.Ast.Project
        Hwfi.Ast.Step
        Hwfi.Ast.Skill
        Hwfi.Ast.InstructionSkill
        Hwfi.Ast.Type
        Hwfi.Ast.TypeAlias
        Hwfi.Ast.Workflow
        Hwfi.Check
        Hwfi.Check.Alias
        Hwfi.Check.Builtins
        Hwfi.Check.Decl
        Hwfi.Check.Error
        Hwfi.Check.Expr
        Hwfi.Check.Graph
        Hwfi.Check.RefHints
        Hwfi.Cli
        Hwfi.Compat
        Hwfi.Parse.Expr
        Hwfi.Parse.Frontmatter
        Hwfi.Parse.Lexer
        Hwfi.Parse.Markdown
        Hwfi.Parse.Project
        Hwfi.Parse.Section
        Hwfi.Parse.Step
        Hwfi.Parse.Type
        Hwfi.Parse.TypeAlias
        Hwfi.Project.Manifest
        Hwfi.Runtime.Agent
        Hwfi.Runtime.Builtins
        Hwfi.Runtime.CheckProject
        Hwfi.Runtime.Context
        Hwfi.Runtime.Error
        Hwfi.Runtime.Eval
        Hwfi.Runtime.EvalWorkflow
        Hwfi.Runtime.Exec
        Hwfi.Runtime.RunCommon
        Hwfi.Runtime.Machine
        Hwfi.Runtime.MachineAgent
        Hwfi.Runtime.MachineRun
        Hwfi.Runtime.MachinePar
        Hwfi.Runtime.MachinePath
        Hwfi.Runtime.MachineSnapshot
        Hwfi.Runtime.ParseMarkdown
        Hwfi.Runtime.TextCorpus
        Hwfi.Runtime.StepDriver
        Hwfi.Runtime.StepEnv
        Hwfi.Runtime.Gateways
        Hwfi.Runtime.Glob
        Hwfi.Runtime.KeyStore
        Hwfi.Runtime.ModelCatalog
        Hwfi.Runtime.Provider
        Hwfi.Runtime.RunStore
        Hwfi.Runtime.RunUsage
        Hwfi.Runtime.Skills
        Hwfi.Runtime.Schema
        Hwfi.Runtime.Secret
        Hwfi.Runtime.StepKey
        Hwfi.Runtime.Trace
        Hwfi.Runtime.Usage
        Hwfi.Runtime.Value
        Hwfi.Runtime.Workspace
        Hwfi.Source
        Hwfi.Text.Corpus
        Hwfi.Type
        Hwfi.Ast.Tool
        Hwfi.TypedProject
        Hwfi.SkillCatalog
    build-depends:
        base                 ^>=4.18,
        aeson                >=2.0  && <2.3,
        bytestring           >=0.11 && <0.12,
        commonmark           >=0.2  && <0.3,
        containers           ^>=0.6.7,
        crypton              >=0.34 && <2,
        directory            >=1.3  && <1.4,
        dotenv               >=0.11 && <0.13,
        filepath             >=1.4  && <1.6,
        llm-simple           ^>=0.1.0.1,
        megaparsec           >=9.0  && <10,
        mtl                  >=2.3  && <2.4,
        optparse-applicative >=0.16 && <0.19,
        parsec               >=3.1  && <3.2,
        parser-combinators   >=1.2  && <1.4,
        random               >=1.2  && <1.3,
        regex-tdfa           >=1.3  && <1.4,
        scientific           >=0.3  && <0.4,
        stm                  >=2.5  && <2.6,
        text                 >=1.2  && <2.2,
        time                 >=1.9  && <1.15,
        typed-process        >=0.2  && <0.3,
        unliftio             >=0.2  && <0.3,
        vector               >=0.12 && <0.14,
        yaml                 >=0.11 && <0.12,
        zlib                 >=0.6  && <0.8

executable hwfi
    import:           opts
    hs-source-dirs:   app
    main-is:          Main.hs
    ghc-options:
        -threaded
        -rtsopts
        "-with-rtsopts=-N"
    build-depends:
        base,
        hwfi

test-suite hwfi-test
    import:           opts
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    ghc-options:
        -threaded
        -rtsopts
        "-with-rtsopts=-N"
    other-modules:
        Hwfi.ExamplesE2ESpec
        Hwfi.CheckSpec
        Hwfi.Check.GraphSpec
        Hwfi.CliSpec
        Hwfi.Parse.ExprSpec
        Hwfi.Parse.MarkdownSpec
        Hwfi.Parse.ProjectSpec
        Hwfi.Parse.SectionSpec
        Hwfi.Parse.StepSpec
        Hwfi.Parse.TypeSpec
        Hwfi.Project.ManifestSpec
        Hwfi.Runtime.AgentSpec
        Hwfi.Runtime.ControlFlowSpec
        Hwfi.Runtime.CrossRunTraceSpec
        Hwfi.Runtime.SkillSpec
        Hwfi.Runtime.DataPlumbingSpec
        Hwfi.Runtime.CheckProjectSpec
        Hwfi.Runtime.ParseMarkdownSpec
        Hwfi.Runtime.TextCorpusSpec
        Hwfi.Text.CorpusSpec
        Hwfi.Runtime.EvalSpec
        Hwfi.Runtime.EvalWorkflowSpec
        Hwfi.Runtime.ExecSpec
        Hwfi.Runtime.MachineRunSpec
        Hwfi.Runtime.MachineSpec
        Hwfi.Runtime.GatewaysSpec
        Hwfi.Runtime.GlobSpec
        Hwfi.Runtime.KeyStoreSpec
        Hwfi.Runtime.ProviderSpec
        Hwfi.Runtime.RunStoreSpec
        Hwfi.Runtime.SchemaSpec
        Hwfi.Runtime.StepKeySpec
        Hwfi.Runtime.TraceSpec
        Hwfi.Runtime.UsageSpec
        Hwfi.Runtime.ValueSpec
        Hwfi.Runtime.WorkspaceSpec
        Hwfi.SourceSpec
        Hwfi.TypeSpec
    build-depends:
        base,
        aeson,
        bytestring >=0.11 && <0.12,
        containers ^>=0.6.7,
        directory  >=1.3 && <1.4,
        filepath   >=1.4 && <1.6,
        hspec      >=2.10 && <2.12,
        hwfi,
        llm-simple           ^>=0.1.0.1,
        megaparsec >=9.0 && <10,
        process    >=1.6 && <1.7,
        temporary  >=1.3 && <1.4,
        text,
        vector     >=0.12 && <0.14
    build-tool-depends: hspec-discover:hspec-discover
